New Classes introduced to enhance game mechanics