@@ -17,29 +17,38 @@ public class SystemManager {
         }
     }
     public void checkGameFiles() throws MissingGameFilesException {
-        String[] filePaths={"src/main/resources/config/GameProperties.properties",
+        String[] filePaths={"src/main/resources/config/Game.properties",
                 "src/main/resources/config/EmberfallDominionRewards.properties",
                 "src/main/resources/config/MysticalSkyRewards.properties",
                 "src/main/resources/config/RadiantSvannaRewards.properties",
                 "src/main/resources/config/RoundsRewards.properties",
                 "src/main/resources/config/TerrasHeartlandRewards.properties",
-                "src/main/resources/config/TideAbyssRewards.properties"
+                "src/main/resources/config/TideAbyssRewards.properties",
+                "src/main/resources/config/Player.properties"
 
         };
         for (String filePath : filePaths) {
             File file = new File(filePath);
             if (!file.exists() || !file.isFile()) {
-                throw new MissingGameFilesException("File %s is not found".formatted(filePath));
+                throw new MissingGameFilesException(String.format("File %s is not found", filePath));
             }
         }
         
+    }
+    public void performSystemChecks(){
+        try{
+            checkSystem();
+        }
+        catch (Exception e){
+            exit(e.getMessage());
+        }
     }
     public void exit(){
         System.out.println("Exiting Game...");
         System.exit(0);
     }
     public void exit(String error){
-        System.out.println("System Error: "+error);
+        System.err.println("System Error: "+error);
         System.out.println("Exiting Game...");
         System.exit(1);
     }
